--- a/src/components/organisms/BuilderAccordion.module.css
+++ b/src/components/organisms/BuilderAccordion.module.css
@@ -47,7 +47,7 @@
 }
 
 .content {
-  padding: 0 15px 15px;
+  padding: 0 12px 15px;
 }
 
 @media (max-width: 560px) {
@@ -58,7 +58,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1fr;
   gap: 15px;
 }
 
@@ -71,12 +71,6 @@
     grid-column: 1 / -1;
     max-width: calc(50% - 7.5px);
     margin: 0 auto;
-  }
-}
-
-@media (max-width: 560px) {
-  .grid {
-    grid-template-columns: 1fr;
   }
 }
 
